--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,12 @@
-h5py==2.7.1
 ipykernel==4.6.1
 ipython==6.2.1
 ipython-genutils==0.2.0
-ipywidgets==7.0.3
-jupyter==1.0.0
 jupyter-client==5.1.0
-Keras==2.0.8
-Markdown==2.6.9
 nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.0.0
 numpy==1.13.1
 protobuf==3.4.0
-scipy==1.0.0
+scipy
 grpcio
 
