--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-ipykernel==4.6.1
-ipython==5.0.0
-ipython-genutils==0.2.0
-jupyter-client==5.1.0
-nbconvert==5.3.1
-nbformat==4.4.0
-notebook==5.0.0
-numpy==1.13.1
-protobuf==3.4.0
-scipy
+jupyter
+protobuf
 grpcio
+numpy
+scipy
 
